@@ -32,10 +32,11 @@ CGUISliderControl::~CGUISliderControl(void)
 
 void CGUISliderControl::Render()
 {
+  if (!IsVisible()) return;
+
   CGUIFont* pFont13 = g_fontManager.GetFont("font13");
   float fRange, fPos, fPercent;
 
-  if (!UpdateEffectState()) return ;
   if (!IsDisabled())
   {
     switch (m_iType)
